# derek

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  jest.config.js  package.json  pyproject.toml  setup.py
.github/workflows/: js_tests.yml  python_tests.yml
docs/: api.md  features.md  index.md  spec.md
js/src/: derek.cjs  derek.js  derek.mjs  index.cjs  index.js  index.mjs  parse.js  parse.mjs  wrapper.mjs
js/src/cjs/: derek.js  index.js
js/src/cjs/parse/: Parser.js  index.js  oas2.js
js/src/esm/: index.js
js/src/parse/: Parser.cjs  Parser.mjs  index.cjs  index.mjs  oas2.mjs
js/tests/: derek.test.js
js/tests/_parse/: oas2.test.js  oas3.test.js
js/tests/cjs/_parse/: oas2.test.js  oas3.test.js
python/: LICENSE  README.rst  pyproject.toml  setup.cfg  setup.py
python/docs/source/: conf.py  index.rst
python/src/derek/: __init__.py  _derek.py  _parse.py  _typing.py
python/src/derek/_parse/: _Parser.py  __init__.py  _oas2.py
python/tests/derek/: test__derek.py
python/tests/derek/_parse/: test__oas3.py  test_oas2.py  test_oas3.py
