[project]
name = "derek"
version = "0.0.1.dev"
description = "Convert data structure to schema."
readme = "README.md"
keywords = ["data", "schema", "convert", "analyze"]
authors = [
  {name = 'Benjamin Woods', email = 'ben@bjqw.me'}
]
license = {file = 'README.md'}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Database"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --cov"
testpaths = [
    "python/tests"
]

[tool.coverage.run]
branch = true
source = [
    "python/src/derek"
]
omit = [
    "python/src/derek/_typing.py"
]
