[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[metadata]
name = derek
version = 0.0.1
description = Convert data structure to schema.
keywords = data, schema, convert, analyze
author = Benjamin Woods
author_email = ben@bjqw.me
license = MIT License
license_files = ../LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Database

[options]
packages = derek
package_dir =
    =src
