[metadata]
name = derek
version = 0.0.1
description = Convert data structure to schema.
long_description = file: README.rst
keywords = data, schema, convert, analyze
author = Benjamin Woods
author_email = ben@bjqw.me
license = MIT License
license_files = LICENSE
url = https://github.com/benjaminwoods/derek
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Database
    Python :: 3.6
    Python :: 3.7
    Python :: 3.8
    Python :: 3.9

[options]
packages = derek
package_dir =
    =src
