[metadata]
name = derek
version = 0.0.1
description = Convert data structure to schema.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = data, schema, convert, analyze
author = Benjamin Woods
author_email = ben@bjqw.me
license = MIT License
license_files = LICENSE
url = https://github.com/benjaminwoods/derek
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Database
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = derek
package_dir =
    =src
